[metadata]
name = datatype-redis
version = attr: redis.__version__
description = Add redis to all python3 builtin datatypes to use in microservice ecosystems.
long_description = file: README.md
url = https://github.com/Heiss/py-datatype-redis
author = Peter Heiss
author_email = peter.heiss@uni-muenster.de
maintainer = Peter Heiss
maintainer_email = peter.heiss@uni-muenster.de
keywords = Redis, key-value store, Datatype
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython


[options]
packages = ["datatype_redis"]
python_requires = >=3.6
install_requires=[
    "redis",
    "redis-py-cluster",
    "pylru"
]

[flake8]
exclude = .venv,.tox,dist,docs,build,*.egg,env,venv,.undodir

[bdist_wheel]
universal = 1
